--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,4 @@
-• Τώρα μπορείς να επιλέξεις να μεταφέρεις το ιστορικό συνομιλιών σου και τα πολυμέσα των τελευταίων 45 ημερών σε μια νέα συνδεδεμένη συσκευή. Η διαδικασία μεταφοράς είναι κρυπτογραφημένη από άκρο σε άκρο και εντελώς προαιρετική.
+• Το φίλτρο «Αρχεία» στη γκαλερί πολυμέσων μπορεί να σε βοηθήσει να βρεις γρήγορα PDF και άλλα συνημμένα αρχεία.
+• Αλλάξαμε τον επιλογέα αντιδράσεων emoji στην καρτέλα Ιστορίες για να λειτουργεί με το σκούρο θέμα.
+• Βελτιώσεις προσβασιμότητας VoiceOver.
+• Ενημερώσαμε επίσης τη σχεδίαση των κωδικών QR σε όλη την εφαρμογή.
