--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,4 @@
-• เพิ่มตัวเลือกในขั้นตอนการเชื่อมโยงอุปกรณ์ ให้คุณสามารถถ่ายโอนประวัติการแชทและไฟล์สื่อจาก 45 วันที่ผ่านมา เลือกถ่ายโอนหรือข้ามขั้นตอนนี้ได้ตามใจคุณ ทั้งยังมั่นใจได้เสมอด้วยการเข้ารหัสตั้งแต่ต้นทางถึงปลายทาง
+• ตัวกรอง “ไฟล์” ในหน้ารวมสื่อจะช่วยให้คุณค้นเจอไฟล์แนบต่างๆ รวมถึง PDF ได้ง่ายและรวดเร็วขึ้น
+• เราปรับรูปแบบตัวเลือกอีโมจิที่ใช้แสดงความรู้สึกในแท็บสตอรี่ให้เข้ากันได้ดีกับธีมมืด
+• พัฒนาความสามารถเพื่อรองรับการทำงานของ VoiceOver
+• นอกจากนี้ ยังมีการปรับโฉมคิวอาร์โค้ดของทั้งแอปอีกด้วย
