--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,4 @@
-• 現在，當你將主要 Signal 裝置連結至新的桌面電腦或 iPad 時，你可以轉移聊天紀錄和最近 45 天的媒體。轉移過程是端對端加密的，且完全可自由選擇。是否要拋開過去，就取決於你自己的意願了。
+• 媒體庫中的「檔案」篩選可以幫助你快速尋找 PDF 和其他附件，例如文字檔 TXT。
+• 我們切換了「限時動態」選項標籤中的表情符號心情回應選擇器，以配合深色主題。
+•「旁白」輔助使用功能改進，包括呼叫鈴聲按鈕標籤，以及顯示訊息包含引用回覆的新功能。
+• 我們還更新了在整個應用程式中的二維碼設計。讓你用手機掃碼更清楚。
