--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,4 @@
-• الآن، عندما تربط جهازك الأساسي الذي يحمل تطبيق سيجنال بحاسوب أو جهاز آيباد جديد، يُمكنك أن تنقل سِجل الدردشة الخاص بك وآخر 45 يومًا من الوسائط. عملية النقل مُشفّرة من طرف لطرف واختيارية كليًا. إذا كُنتَ تُفكِّر في نقل بياناتك السابقة أو تجاهلها، دع أجهزتك تساعدك في ذلك.
+• يُمكن أن يُساعدك فلتر "الملفات" في معرض الوسائط على العُثور بسرعة على ملفات PDFs ومُلحقات أخرى.
+• قُمنا بتغيير مُنتقي تفاعلات الإيموجي في علامة تبويب القصص لِيعمل في النمط الداكن.
+• تحسينات في الوصول إلى التعليق الصوتي VoiceOver.
+• قُمنا أيضًا بتحديث تصميم كودات الـ QR في التطبيق بأكمله.
