--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,4 @@
-• Når du forbinder din primære Signal-enhed til en ny computer eller iPad, kan du tage din chathistorik og medierne for de sidste 45 dage med dig. Overførselsprocessen er end-til-end-krypteret og helt valgfri. Når det kommer til at træffe valget om, hvorvidt du vil lade fortiden være fortid eller ej, er valget dit.
+• Filteret"Filer" i mediegalleriet kan hjælpe dig med hurtigt at finde PDF'er og andre vedhæftede filer, f.eks. TXT, der virkelig kunne have været en tekst.
+• Vi har skiftet emoji-reaktionsvælgeren på fanen Historier, så den fungerer med det mørke tema, men den rigtige reaktion kan stadig give oplysning.
+• VoiceOver-tilgængelighedsforbedringer, herunder en etiket til ringeknappen til opkald og ny funktionalitet til at angive, når en besked indeholder et citeret svar.
+• Vi har også opdateret designet af QR-koderne i hele appen. De har altid set godt ud foran et kamera, men de er praktisk talt klar til et photoshoot nu.
