--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,4 @@
-• अब, जब आप अपने मुख्य Signal डिवाइस को किसी नए डेस्कटॉप या iPad से लिंक करते हैं, तो आप उसमें अपनी चैट का इतिहास और पिछले 45 दिनों का अपना मीडिया ले सकते हैं। ट्रांसफ़र की प्रोसेस एंड-टू-एंड एनक्रिप्टेड और पूरी तरह वैकल्पिक होती है। जब बात आती है कि अपने अतीत को पीछे छोड़ा जाए या नहीं, तो सारी ज़िम्मेदारी आपके डिवाइस पर आ जाती है।
+• मीडिया गैलेरी में, “फ़ाइलें” फ़िल्टर की मदद से, आप तेज़ी से PDF और दूसरे अटैचमेंट ढूँढ सकते हैं, जैसे कि TXT, जो टेक्स्ट में भी भेजा जा सकता था।
+• हमने गहरी थीम के साथ काम करने के लिए, स्टोरीज़ टैब में इमोजी प्रतिक्रिया पिकर को स्विच कर दिया है, लेकिन अब भी सही प्रतिक्रिया से जानकारी मिल सकती है।
+• वॉयसओवर ऐक्सेसेबिलिटी में सुधार, जिसमें कॉल रिंग बटन के लिए लेबल और यह बताने के लिए नई सुविधा शामिल है कि किसी संदेश में क्वोट किया गया जवाब है।
+• हमने पूरे ऐप में QR कोड का डिज़ाइन भी अपडेट कर दिया है। वे हमेशा से कैमरे के सामने अच्छे लगते थे, लेकिन अब वे फ़ोटो शूट के लिए तैयार हैं।
