--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,4 @@
-• Sada možete prenijeti svoju povijest razgovora i medijske zapise iz posljednjih 45 dana na novi povezani uređaj. Proces prijenosa je sveobuhvatno šifriran i potpuno neobavezan.
+• Filtar „Datoteke“ u galeriji medijskih zapisa može vam pomoći brže pronaći PDF-ove i ostale privitke.
+• Prilagodili smo izbornik reakcija u kartici „Priče“ tamnoj temi.
+• Unaprijedili smo pristupačnost VoiceOver-a.
+• Također smo ažurirali dizajn QR kodova u aplikaciji.
