--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,1 +1,4 @@
-• チャット履歴と過去45日間のメディアを、新しいリンク済み端末に移行するかどうかを選択できるようになりました。移行プロセスはエンドツーエンドで暗号化されており、完全にオプションです。
+• メディアギャラリーの「ファイル」フィルターは、PDFやその他の添付ファイルを素早く見つけるのに便利です。
+• ストーリーズタブの絵文字リアクションピッカーをダークテーマに対応するように調整しました。
+•VoiceOverのアクセシビリティを改良しました。
+• アプリ全体のQRコードのデザインもアップデートしました。
