--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,1 +1,4 @@
-• 이제 대화 기록과 지난 45일간의 미디어를 새로운 연결 기기로 전송하도록 선택할 수 있습니다. 전송 프로세스는 종단 간 암호화로 보호되지만, 전적으로 선택 가능합니다.
+• 미디어 갤러리의 '파일' 필터를 사용하면 빠르게 PDF와 기타 첨부 파일을 찾을 수 있습니다.
+• 스토리 탭의 이모지 반응 선택기가 어두운 테마와 작동하도록 변경했습니다.
+• 보이스오버 접근성 향상.
+• 앱 전반의 QR 코드 디자인도 업데이트했습니다.
