--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,4 @@
-• Je kunt er nu voor kiezen om je chatgeschiedenis en de laatste 45 dagen aan media over te zetten naar een nieuw gekoppeld apparaat. Het overdrachtsproces is end-to-end versleuteld en volledig optioneel. Aan jou de keus of je je verleden achter je laat of gewoon met je mee blijft dragen.
+• Met het filter ‘Documenten’ in de mediagalerij kun je snel PDF's en andere bijlagen vinden.
+• De emoji-reactiekiezer op het tabblad Verhalen werkt nu ook met het donkere thema, maar de juiste reactie kan nog steeds verlichting bieden.
+• Toegankelijkheidsverbeteringen voor VoiceOver, waaronder een label voor de oproepknop en nieuwe functionaliteit om aan te geven wanneer een bericht een geciteerd antwoord bevat.
+• We hebben ook het ontwerp van de QR-codes in de hele app bijgewerkt. Ze zagen er altijd al goed uit voor de camera, maar nu zijn ze klaar voor een heuse fotoshoot.
