--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,4 @@
-• Agora, ao vincular seu dispositivo principal do Signal a um novo desktop ou iPad, você pode levar seu histórico de conversa e os últimos 45 dias de mídia com você. O processo de transferência é criptografado de ponta a ponta e totalmente opcional..
+•  O filtro “Arquivos” na galeria de mídia ajuda você a encontrar rapidamente PDFs e outros anexos.
+• Trocamos o seletor de reação de emojis na aba Stories para que ele funcione no modo escuro.
+• Melhorias na acessibilidade da locução, incluindo um rótulo para o botão de toque de chamada e uma nova funcionalidade para indicar quando uma mensagem inclui uma citação de resposta.
+• Também atualizamos o design dos QR codes no app.
