--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,4 @@
-• Теперь, когда вы привязываете основное устройство Signal к новому ПК или iPad, вы можете взять с собой историю чатов и медиафайлы за последние 45 дней. Перенос защищён сквозным шифрованием и совершенно необязателен. Решение вопроса о том, оставлять ли прошлое позади, остаётся на ваше усмотрение.
+• Фильтр «Файлы» в галерее медиафайлов поможет вам быстро найти PDF-файлы и другие вложения, такие как TXT, которые на самом деле могли быть текстом.
+• Мы переключили меню реакций на эмодзи во вкладке «Истории» для работы с тёмной темой.
+• Улучшения доступности VoiceOver, в том числе метка для кнопки звонка и новая функция, указывающая, когда сообщение содержит ответ с цитатой.
+• Мы также обновили дизайн QR-кодов во всём приложении. Они всегда хорошо смотрелись на фото, но теперь они просто супер фотогеничны.
