--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,1 +1,4 @@
-• Nu kan du välja att överföra din chatthistorik och dina senaste 45 dagars media till en ny länkad enhet. Överföringsprocessen är krypterad från början till slut och är helt frivillig.
+• Filtret Filer i mediagalleriet kan hjälpa dig att snabbt hitta PDF-filer och andra bilagor.
+• Vi har bytt ut väljaren för emojireaktioner på fliken Stories så att den fungerar med det mörka temat.
+• Förbättringar av VoiceOver-tillgängligheten.
+• Vi har också uppdaterat designen på QR-koderna i hela appen.
