--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,4 @@
-• Giờ đây bạn có thể chọn chuyển lịch sử trò chuyện và tập tin đa phương tiện trong 45 ngày vừa qua của mình đến thiết bị liên kết mới. Quá trình chuyển dữ liệu được mã hóa đầu cuối và hoàn toàn là tùy chọn.
+• Tùy chọn lọc "Tập tin" trong thư viện đa phương tiện có thể giúp bạn nhanh chóng tìm được tập tin PDF và các tập tin đính kèm khác.
+• Chúng tôi đã điều chỉnh để bảng chọn emoji bày tỏ cảm xúc của Story tương thích với chủ đề tối.
+• Cải thiện khả năng tiếp cận của tính năng VoiceOver (Thuyết minh).
+• Chúng tôi cũng đã cập nhật thiết kế của mã QR trên toàn ứng dụng.
