--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,1 +1,4 @@
-• 现在您可以选择将聊天记录和最近 45 天的媒体转移到新的已链接设备。转移过程受端到端加密保护，并且是完全可选的选项。
+• 媒体库中的“文件”筛选功能可以帮助您快速找到 PDF 和其他附件。
+• 我们切换了动态选项卡中的表情符号回应选择器，以适配夜间模式。
+• VoiceOver 旁白辅助功能得到了优化。
+• 我们还更新了整个应用中的二维码设计。
