--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,2 @@
 • Τώρα μπορείς να επιλέξεις να μεταφέρεις το ιστορικό συνομιλιών σου και τα πολυμέσα των τελευταίων 45 ημερών σε μια νέα συνδεδεμένη συσκευή. Η διαδικασία μεταφοράς είναι κρυπτογραφημένη από άκρο σε άκρο και εντελώς προαιρετική.
+• Fixed an issue preventing sending Memoji and iOS stickers.
