--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,2 @@
 • Je kunt er nu voor kiezen om je chatgeschiedenis en de laatste 45 dagen aan media over te zetten naar een nieuw gekoppeld apparaat. Het overdrachtsproces is end-to-end versleuteld en volledig optioneel. Aan jou de keus of je je verleden achter je laat of gewoon met je mee blijft dragen.
+• Fixed an issue preventing sending Memoji and iOS stickers.
