--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,2 @@
 • Теперь, когда вы привязываете основное устройство Signal к новому ПК или iPad, вы можете взять с собой историю чатов и медиафайлы за последние 45 дней. Перенос защищён сквозным шифрованием и совершенно необязателен. Решение вопроса о том, оставлять ли прошлое позади, остаётся на ваше усмотрение.
+• Fixed an issue preventing sending Memoji and iOS stickers.
