--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,2 +1,1 @@
-• עכשיו אפשר לבחור להעביר את היסטוריית הצ׳אט ואת 45 ימי המדיה האחרונים שלך למכשיר מקושר חדש. תהליך ההעברה מוצפן מקצה לקצה, והוא לגמרי לא חובה.
-• Fixed an issue preventing sending Memoji and iOS stickers.
+• תוקנה בעיה שמנעה שליחת Memoji וסטיקרים של iOS.
