--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,2 +1,1 @@
-• A partir d'ara, quan enllacis un nou dispositiu, tindràs l'opció de transferir-hi l'historial del xat i els teus darrers 45 dies d'arxius multimèdia. El procés de transferència és xifrat d'extrem a extrem (i totalment opcional).
-• Fixed an issue preventing sending Memoji and iOS stickers.
+• S'ha solucionat un problema que impedia enviar Memoji i stickers d'iOS.
