--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,2 +1,1 @@
-• チャット履歴と過去45日間のメディアを、新しいリンク済み端末に移行するかどうかを選択できるようになりました。移行プロセスはエンドツーエンドで暗号化されており、完全にオプションです。
-• Fixed an issue preventing sending Memoji and iOS stickers.
+• ミー文字とiOSステッカーを送信できない問題を修正しました。
