--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,2 +1,1 @@
-• Acum, când conectezi dispozitivul Signal principal la un nou desktop sau iPad, poți avea acces la istoricul conversațiilor și la fișierele media din ultimele 45 de zile. Procesul de transfer este criptat end-to-end și complet opțional. Când vine vorba de a alege dacă să lași sau nu trecutul în urmă, ești lăsat pe propriile tale dispozitive.
-• Fixed an issue preventing sending Memoji and iOS stickers.
+• Am remediat o problemă care împiedica trimiterea stickerelor Memoji și iOS.
