--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,2 +1,1 @@
-• Teraz si môžete preniesť históriu četov a médiá z posledných 45 dní do nového prepojeného zariadenia. Prenos je voliteľný a jeho proces chránený end-to-end šifrovaním.
-• Fixed an issue preventing sending Memoji and iOS stickers.
+• Odstránili sme chybu, ktorá bránila odosielaniu memoji a nálepiek iOS.
