--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,2 +1,1 @@
-• Nu kan du välja att överföra din chatthistorik och dina senaste 45 dagars media till en ny länkad enhet. Överföringsprocessen är krypterad från början till slut och är helt frivillig.
-• Fixed an issue preventing sending Memoji and iOS stickers.
+• Åtgärdat ett problem som förhindrade att Memoji och iOS-klistermärken skickades.
