--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,2 +1,1 @@
-• 現在，當你將主要 Signal 裝置連結至新的桌面電腦或 iPad 時，你可以轉移聊天紀錄和最近 45 天的媒體。轉移過程是端對端加密的，且完全可自由選擇。是否要拋開過去，就取決於你自己的意願了。
-• Fixed an issue preventing sending Memoji and iOS stickers.
+• 修正無法傳送 Memoji 和 iOS 貼圖的問題。
