--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• עכשיו אפשר לבחור להעביר את היסטוריית הצ׳אט ואת 45 ימי המדיה האחרונים שלך למכשיר מקושר חדש. תהליך ההעברה מוצפן מקצה לקצה, והוא לגמרי לא חובה.
+• עכשיו אפשר לקשר את מכשיר Signal העיקרי שלך לשולחן עבודה חדש ולהעביר איתך גם את היסטוריית הצ׳אט ואת 45 ימי המדיה האחרונים שלך. תהליך ההעברה מוצפן מקצה לקצה, והוא לגמרי לא חובה.
