--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,1 +1,1 @@
-• 现在您可以选择将聊天记录和最近 45 天的媒体转移到新的已链接设备。转移过程受端到端加密保护，并且是完全可选的选项。
+• 现在当您将主 Signal 设备链接到新的桌面版时，您可以选择一并转移聊天记录和最近 45 天的媒体。转移过程受端到端加密保护，并且是完全可选的选项。当面临选择是否抛弃过往记录时，您可自行决定。
